Fix iOS memory crash by improving Rive disposal and navigation
- Change Rive file/controller to nullable with centralized disposal
- Use pushReplacement for ChatScreen navigation to dispose BreakdownScreen
- Add analysis data storage in FileStorageService for back navigation
- Handle showlastImmediately to skip to breakdown_10 when returning
- Fix chat_screen Column overflow with SingleChildScrollView

--- a/env/staging.env
+++ b/env/staging.env
@@ -1,3 +1,3 @@
 API_BASE_URL=http://138.197.170.122:8000
-LOCAL_API_BASE_URL=http://localhost:8000
+LOCAL_API_BASE_URL=http://138.197.170.122:8000
 API_KEY=dev-key-Y4x4245ok4xVmwOXS6cnJqdmMhoagq_WyOXJIf7J54E
