--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.0+4
+version: 0.1.0+6
 
 environment:
   sdk: ^3.9.2
@@ -41,6 +41,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   http: ^1.2.2
   audioplayers: ^6.5.1
+  shared_preferences: ^2.3.5
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
