--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  rive: ^0.14.0-dev.8
+  rive: ^0.14.1
   country_code_picker: ^3.4.1
-  google_fonts: ^6.2.1
-  file_picker: ^10.3.3
-  flutter_dotenv: ^5.2.1
-  http: ^1.2.2
+  google_fonts: ^8.0.0
+  file_picker: ^10.3.9
+  flutter_dotenv: ^6.0.0
+  http: ^1.6.0
   audioplayers: ^6.5.1
   shared_preferences: ^2.3.5
   path_provider: ^2.1.5
